// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return ExpenseSummary with 1 expense 1`] = `
<div>
  Viewing 1 expense totalling $3.50
</div>
`;

exports[`should return ExpenseSummary with multiple expenses 1`] = `
<div>
  Viewing 3 expenses totalling $1,143.50
</div>
`;
